# Lip-Reading-Coursework

./: .gitignore  .gitmodules  README.md
Belonogov/CPP/: CMakeCache.txt  CMakeLists.txt  CPP  Makefile  SegSet.cpp  SegSet.h  cmake_install.cmake  go.sh  main.cpp  main.h  multiRun.sh  pnt.cpp  pnt.h  run.sh  tmp.sh  webcam_belonogov.cpp
Belonogov/CPP/dlib_build/: Makefile  cmake_install.cmake
Belonogov/examples/: CMakeLists.txt  SegSet.cpp  SegSet.h  webcam_belonogov.cpp
Belonogov/python/: .example.py.swp  .foo.txt.swp  example.py
Reports/: 1.tex  tmp
VVAD/: run
VVAD/count results/: A.java  output.txt  overall_output.txt
VVAD/helpers/: CMakeLists.txt
VVAD/src/: lip_reading.cpp
instructions/: 16_11_15
